--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,19 @@ img {
   display: block;
 }
 
+input,
+textarea,
+button {
+  font-family: inherit;
+  line-height: inherit;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
 /**
   |============================
   | Global styles
@@ -143,12 +156,6 @@ body {
   border-radius: 2px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* .nav-link.current:after {
-  color: #404bbf;
-  opacity: 1;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
 
 .address-list {
   margin-left: auto;
@@ -280,6 +287,64 @@ body {
   background-color: var(--green, #31d0aa);
 }
 
+/* Footer form styles */
+
+.subscribe-form-container {
+  margin-left: 80px;
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-form-label {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  font-weight: 500;
+}
+
+.subscribe-form-input {
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--white, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin-right: 24px;
+  background: var(--navyblue, #2e2f42);
+  padding: 8px 0 8px 16px;
+  color: var(--white, #ffffff);
+}
+
+input::placeholder {
+  color: var(--white, #ffffff);
+}
+
+.subscr-btn {
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  font-weight: 500;
+  color: var(--white, #ffffff);
+  align-self: flex-end;
+  border: none;
+}
+
+.subscr-btn:hover,
+.subscr-btn:focus {
+  background-color: #404bbf;
+  cursor: pointer;
+}
+
+.subcr-icon-fill {
+  fill: var(--white, #ffffff);
+}
+
 /**
   |============================
   | Modal window styles
@@ -342,6 +407,51 @@ body {
 
 .close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Modal form styles */
+.modal-form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-group {
+  margin-top: 72px;
+  padding: 0px 24px;
+}
+
+.input {
+  width: 360px;
+  height: 58px;
+  display: flex;
+  flex-direction: column;
+}
+
+.legend {
+  margin: 72px 0 16px 0;
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+
+.label-title {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  color: var(--lightslate, #8e8f99);
+}
+
+.checkbox {
+  display: flex;
+  align-self: flex-start;
+}
+
+.checkbox-license-container {
+  display: flex;
 }
 
 /**
