--- a/css/styles.css
+++ b/css/styles.css
@@ -290,61 +290,65 @@ body {
 /* Footer form styles */
 
 .subscribe-form-container {
-  margin-left: 80px;
+}
+
+.subscribe-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white, #ffffff);
 }
 
 .subscribe-form {
   display: flex;
+  gap: 24px;
 }
 
-.subscribe-form-label {
+.subscribe-label {
+}
+
+.subscribe-btn {
+  min-width: 165px;
+  height: 40px;
   display: flex;
-  flex-direction: column;
-  row-gap: 16px;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white, #ffffff);
+  cursor: pointer;
+  background-color: var(--iris, #4d5ae5);
+  border: none;
+  border-radius: 4px;
 }
 
-.subscribe-form-input {
+.subscribe-icon {
+  margin-left: 16px;
+  fill: var(--white, #ffffff);
+}
+
+.subscribe-input {
   width: 264px;
   height: 40px;
-  flex-shrink: 0;
+  border: 1px solid var(--white, #ffffff);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: left 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  border: 1px solid var(--white, #fff);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-right: 24px;
-  background: var(--navyblue, #2e2f42);
-  padding: 8px 0 8px 16px;
   color: var(--white, #ffffff);
 }
 
 input::placeholder {
   color: var(--white, #ffffff);
 }
-
-.subscr-btn {
-  display: flex;
-  padding: 8px 24px;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  border-radius: 4px;
-  background: var(--iris, #4d5ae5);
-  font-weight: 500;
-  color: var(--white, #ffffff);
-  align-self: flex-end;
-  border: none;
-}
-
-.subscr-btn:hover,
-.subscr-btn:focus {
-  background-color: #404bbf;
-  cursor: pointer;
-}
-
-.subcr-icon-fill {
-  fill: var(--white, #ffffff);
-}
-
 /**
   |============================
   | Modal window styles
