--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ body {
 /* Footer form styles */
 
 .subscribe-form-container {
+  margin-left: 80px;
 }
 
 .subscribe-title {
@@ -304,9 +305,6 @@ body {
 .subscribe-form {
   display: flex;
   gap: 24px;
-}
-
-.subscribe-label {
 }
 
 .subscribe-btn {
@@ -340,7 +338,7 @@ body {
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: left 16px;
+  padding-left: 16px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: var(--white, #ffffff);
@@ -349,6 +347,7 @@ body {
 input::placeholder {
   color: var(--white, #ffffff);
 }
+
 /**
   |============================
   | Modal window styles
@@ -382,6 +381,8 @@ input::placeholder {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  padding: 72px 24px 24px 24px;
 }
 
 .button-close {
@@ -414,48 +415,59 @@ input::placeholder {
 }
 
 /* Modal form styles */
-.modal-form-container {
-  display: flex;
-  flex-direction: column;
-}
 
-.modal-form-group {
-  margin-top: 72px;
-  padding: 0px 24px;
-}
-
-.input {
-  width: 360px;
-  height: 58px;
-  display: flex;
-  flex-direction: column;
-}
-
-.legend {
-  margin: 72px 0 16px 0;
-  color: var(--navyblue, #2e2f42);
-  text-align: center;
+.callback-form-tittle {
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--navyblue, #2e2f42);
+  margin-bottom: 16px;
 }
 
-.label-title {
+.callback-form-container {
+  margin-bottom: 8px;
+}
+
+.callback-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-tittle {
   font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 1.17;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.04em;
   color: var(--lightslate, #8e8f99);
+  display: block;
+  margin-bottom: 4px;
 }
 
-.checkbox {
-  display: flex;
-  align-self: flex-start;
+.input-container {
+  position: relative;
 }
 
-.checkbox-license-container {
-  display: flex;
+.input-text {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input:focus {
+  border-color: var(--iris, #4d5ae5);
+}
+
+input:focus + svg {
+  fill: var(--iris, #4d5ae5);
 }
 
 /**
