--- a/css/styles.css
+++ b/css/styles.css
@@ -486,6 +486,10 @@ input::placeholder {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.comment {
+  margin-bottom: 16px;
+}
+
 .comment-content:focus {
   border-color: var(--iris, #4d5ae5);
 }
