--- a/css/styles.css
+++ b/css/styles.css
@@ -513,11 +513,11 @@ input::placeholder {
   margin-right: 8px;
 }
 
-.visually-hidden:checked + label > span {
+/* input:checked + label > span {
   background-color: var(--ocean, #404bbf);
   border: none;
   fill: var(--cloud, #f4f4fd);
-}
+} */
 
 .privacy-policy-link {
   color: var(--iris, #4d5ae5);
