--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,16 @@ body {
   margin-bottom: 16px;
   margin-right: 0;
   text-decoration: none;
+
+  color: var(--iris, #4d5ae5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .footer-aside {
@@ -328,6 +338,12 @@ body {
 .subscribe-icon {
   margin-left: 16px;
   fill: var(--white, #ffffff);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: #404bbf;
+  cursor: pointer;
 }
 
 .subscribe-input {
@@ -434,6 +450,7 @@ input::placeholder {
   position: absolute;
   left: 16px;
   top: 50%;
+  fill: var(--navyblue, #2e2f42);
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -445,6 +462,14 @@ input::placeholder {
   color: var(--lightslate, #8e8f99);
   display: block;
   margin-bottom: 4px;
+}
+
+.comment-label-tittle {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--lightslate, #8e8f99);
+  display: block;
 }
 
 .input-container {
@@ -471,6 +496,7 @@ input::placeholder {
 }
 
 .comment-content {
+  display: block;
   width: 100%;
   height: 120px;
   font-size: 12px;
@@ -539,6 +565,12 @@ input::placeholder {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
+}
+
+.callback-btn:hover,
+.callback-btn:focus {
+  background-color: #404bbf;
+  cursor: pointer;
 }
 
 /**
